[gd_scene load_steps=12 format=3 uid="uid://blfaaxxwfj1vi"]

[ext_resource type="Script" path="res://CODIGOS/abelito.gd" id="1_gdnl4"]
[ext_resource type="Texture2D" uid="uid://dchvrtgtnm8fk" path="res://img/characters/abelito.png" id="2_gaf4s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skd6a"]
size = Vector2(80, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_7if10"]
atlas = ExtResource("2_gaf4s")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtb4t"]
atlas = ExtResource("2_gaf4s")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rr2w"]
atlas = ExtResource("2_gaf4s")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jhyh"]
atlas = ExtResource("2_gaf4s")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0hwy"]
atlas = ExtResource("2_gaf4s")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q1f2"]
atlas = ExtResource("2_gaf4s")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_w2w4j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7if10")
}],
"loop": true,
"name": &"Dead ",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtb4t")
}],
"loop": true,
"name": &"Idle",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rr2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jhyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0hwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q1f2")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfyx8"]
size = Vector2(85, 109)

[node name="jugador" type="CharacterBody2D" groups=["jugadores"]]
position = Vector2(15, 18)
script = ExtResource("1_gdnl4")

[node name="ContadorDeMonedas" type="Label" parent="."]
offset_left = 213.0
offset_top = 68.0
offset_right = 306.0
offset_bottom = 91.0
text = "Monedas:  0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(258, 146.5)
shape = SubResource("RectangleShape2D_skd6a")
metadata/_edit_group_ = true

[node name="Abelito" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(254.5, 142.5)
scale = Vector2(7.252, 7)
sprite_frames = SubResource("SpriteFrames_w2w4j")
animation = &"Walk"
frame_progress = 0.985702
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(257.5, 146.5)
shape = SubResource("RectangleShape2D_gfyx8")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
